Fix bad wrapping when missing department thumbnail
* Added django command to verify 200s for all department thumbnails
* Adjusted the min-height of the department card thumb to match the thumb sizes for images that exist/return 200s

--- a/firecares/firestation/static/firestation/theme/assets/less/style.less
+++ b/firecares/firestation/static/firestation/theme/assets/less/style.less
@@ -2142,7 +2142,7 @@ header{
   .ct-imageBox{
     img{
       background: @gray-lighter;
-      min-height: 150px;
+      min-height: 158px;
       width: 100%;
     }
   }
